# zkautoresearch

./: .gitignore  Makefile  README.md  attestation_audit.py  auto_research.py  auto_research_config.yaml  conftest.py  experiment_runtime.py  prepare.py  program.md  pyproject.toml  run_network.py  subprocess_auto_research.py  test_auto_research_cli.py  test_environment.py  test_experiment_runtime.py  test_network_behavior.py  test_prepare_selection_metric.py  test_stark_integrity.py  test_subprocess_auto_research.py  train.py
.github/workflows/: ci.yml
scripts/: install_ves_stark.py
stark_autoresearch/: __init__.py  agent.py  coordinator.py  environment.py  experiment.py  proof.py
